--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -4578,10 +4578,10 @@ label {
       width: 50px;
       text-align: right;
       display: inline-block;
-      margin-left: 30px;
+      margin-left: 10px;
       color: #222222; }
   .order_box .list li:nth-child(4) a .middle {
-    margin-left: 48px; }
+    margin-left: 35px; }
   .order_box .list_2 li a {
     text-transform: uppercase;
     color: #222222;
@@ -5846,3 +5846,6 @@ label {
     color: #ffba00; }
 
 /*# sourceMappingURL=main.css.map */
+.close {
+  color: #ffcc00;
+}
