--- a/Views/userViews/editProfile.hbs
+++ b/Views/userViews/editProfile.hbs
@@ -107,7 +107,7 @@
             <div class="tracking_box_inner">
                 {{!-- <p>To track your order please enter your Order ID in the box below and press the "Track" button. This
                     was given to you on your receipt and in the confirmation email you should have received.</p> --}}
-                <form class="row tracking_form" action="#" method="post" novalidate="novalidate">
+                <form class="row tracking_form" action="/updateProfile" method="post" novalidate="novalidate">
                     <div class="col-md-12 form-group">
                         <label>First Name</label>
                         <input type="text" class="form-control" id="fname" name="fname"  value="{{userdata.fname}}">
@@ -124,9 +124,9 @@
                         <label>Phone Number</label>
                         <input type="number" class="form-control" id="number" name="number"  value="{{userdata.number}}">
                     </div>
-                    <div class="col-md-12 form-group">
+                    {{!-- <div class="col-md-12 form-group">
                         <input type="email" class="form-control" id="email" name="email" placeholder="Billing Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Billing Email Address'">
-                    </div>
+                    </div> --}}
                     <div class="col-md-12 form-group">
                         <button type="submit" value="submit" class="primary-btn"> Save Changes</button>
                     </div>
