--- a/Views/userViews/profile.hbs
+++ b/Views/userViews/profile.hbs
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>ProGear Shop</title>
+    <title>ProGear</title>
     <!--
 			CSS
 			============================================= -->
@@ -371,11 +371,11 @@
                         </aside>
                         <aside class="single_sidebar_widget author_widget">
                             {{!-- <img class="author_img rounded-circle" src="img/blog/author.png" alt=""> --}}
-                            <h4>Name</h4>
+                            <h4>{{user.fname}} {{user.lname}}</h4>
                             <br>
-                            <p>emailid@gmail.com</p>
+                            <p>{{user.email}}</p>
                             <br>
-                            <p>12334849033</p>
+                            <p>{{user.number}}</p>
                             <br>
                             {{!-- <div class="social_icon">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -398,25 +398,25 @@
                                 <li>
                                     <a href="#" class="d-flex justify-content-between">
                                         <p>Your Orders</p>
-                                        <p>37</p>
+                              
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="d-flex justify-content-between">
+                                    <a href="/editAddress" class="d-flex justify-content-between">
                                         <p>Your Address</p>
-                                        <p>24</p>
+                                      
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex justify-content-between">
                                         <p>Forgot Password</p>
-                                        <p>59</p>
+                                     
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="d-flex justify-content-between">
                                         <p>Contact</p>
-                                        <p>29</p>
+                                   
                                     </a>
                                 </li>
                                 {{!-- <li>
@@ -440,10 +440,10 @@
                             </ul>
                             <div class="br"></div>
                         </aside>
-                        <aside class="single_sidebar_widget ads_widget">
+                        {{!-- <aside class="single_sidebar_widget ads_widget">
                             <a href="#"><img class="img-fluid" src="img/blog/add.jpg" alt=""></a>
                             <div class="br"></div>
-                        </aside>
+                        </aside> --}}
                         {{!-- <aside class="single_sidebar_widget post_category_widget">
                             <h4 class="widget_title">Post Catgories</h4>
                             <ul class="list cat-list">
@@ -493,25 +493,24 @@
                             <div class="br"></div>
                         </aside> --}}
                         <aside class="single-sidebar-widget newsletter_widget">
-                            <h4 class="widget_title">Newsletter</h4>
+                            <h4 class="widget_title">Feedback</h4>
                             <p>
-                                Here, I focus on a range of items and features that we use in life without
-                                giving them a second thought.
+                                Comments and suggetions on your experience on this website
                             </p>
                             <div class="form-group d-flex flex-row">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text"><i class="fa fa-envelope" aria-hidden="true"></i></div>
                                     </div>
-                                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email"
+                                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter message"
                                         onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'">
                                 </div>
-                                <a href="#" class="bbtns">Subcribe</a>
+                                <a href="#" class="bbtns">Submit</a>
                             </div>
                             <p class="text-bottom">You can unsubscribe at any time</p>
                             <div class="br"></div>
                         </aside>
-                        <aside class="single-sidebar-widget tag_cloud_widget">
+                        {{!-- <aside class="single-sidebar-widget tag_cloud_widget">
                             <h4 class="widget_title">Tag Clouds</h4>
                             <ul class="list">
                                 <li><a href="#">Technology</a></li>
@@ -527,7 +526,7 @@
                                 <li><a href="#">Lifestyle</a></li>
                                 <li><a href="#">Adventure</a></li>
                             </ul>
-                        </aside>
+                        </aside> --}}
                     </div>
                 </div>
             </div>
@@ -551,8 +550,8 @@
                 </div>
                 <div class="col-lg-4  col-md-6 col-sm-6">
                     <div class="single-footer-widget">
-                        <h6>Newsletter</h6>
-                        <p>Stay update with our latest</p>
+                        <h6>Feedback</h6>
+                        <p>Comments and suggetions on your experience on this website </p>
                         <div class="" id="mc_embed_signup">
 
                             <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
@@ -560,8 +559,8 @@
 
                                 <div class="d-flex flex-row">
 
-                                    <input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                                    <input class="form-control" name="EMAIL" placeholder="Enter Message" onfocus="this.placeholder = ''"
+                                        onblur="this.placeholder = 'Enter Message '" required="" type="email">
 
 
                                     <button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
